# spark

./: .gitignore  .lefthook.yml  .mise.toml  .prettierignore  CLAUDE.md  Dockerfile  Makefile  README.md  run-everything.sh  so.template.config.yaml
protos/: dkg.proto  gossip.proto  lrc20.proto  mock.proto  spark.proto  spark_internal.proto  spark_token.proto  spark_token_internal.proto  spark_tree.proto
sdks/js/: .editorconfig  README.md  package.json  postinstall.sh  turbo.json
signer/spark-frost/: Cargo.toml
signer/spark-frost-uniffi/: README.md  build-rn-bindings.sh
signer/spark-frost/benches/: signing_bench.rs
signer/spark-frost/protos/: frost.proto
signer/spark-frost/src/: bridge.rs  lib.rs  signing.rs
spark/: .gitignore  .golangci.yml  .mise.toml  constant.go  go.mod  go.sum
spark/common/: adaptor_signature_test.go  bitcoin.go  bitcoin_test.go  bitmap.go  bitmap_test.go  collections.go  collections_test.go  connection.go  keys.go  keys_test.go  mock_action.go  proof.go  spark_address.go  spark_address_hash_test.go  spark_address_test.go  token_metadata.go  token_metadata_test.go  tracing.go  tracing_test.go  transfer_package.go
spark/so/: config.go  operator.go
spark/test_util/: test_bitcoind.go  test_config.go  test_faucet.go  test_tree.go  test_tx.go
spark/testing/: ent.go  k8s.go  skip.go  test_bitcoind.go  test_config.go  test_connection.go  test_faucet.go  test_operator.go  test_tree.go  test_tx.go
spark/tools/: tools.go
spark/wallet/: authn.go  config.go  coop_exit.go  deposit.go  events.go  lightning.go  (+12 more)
tools/: pyproject.toml
(+688 files in other folders)
