[package]
name = "spark-frost"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
frost-secp256k1-tr = { workspace = true }
frost-core = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
bitcoin = "0.32.5"
ecies = { workspace = true }
rayon = "1.10.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { workspace = true }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "signing_bench"
harness = false

[build-dependencies]
tonic-build = { workspace = true }
prost-build = "0.11"

